# esp-idf-fram

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Kconfig  LICENSE  README.md  idf_component.yml
.github/workflows/: ci.yml
examples/fram_basic/: CMakeLists.txt  README.md  sdkconfig
examples/fram_basic/main/: CMakeLists.txt  main.c
include/fram/: fram.h  fram_dev.h  fram_hal.h  fram_kvs.h  fram_partition.h  fram_ring.h  fram_superblock.h  fram_vslot.h
src/: fram_crc.c  fram_crc.h  fram_dev.c  fram_hal_mock.c  fram_hal_spi.c  fram_kvs.c  fram_partition.c  fram_ring.c  fram_superblock.c  fram_vslot.c
test/: CMakeLists.txt  sdkconfig.defaults  test_fram.c
test_apps/test_fram/: CMakeLists.txt  sdkconfig.defaults
test_apps/test_fram/main/: test_main.c
